provide an authorization button for swagger
