# docs/swagger/swagger.yaml
@@ -291,7 +291,7 @@ definitions:
         example: wang374
         type: string
     type: object
-host: 178.128.0.108:3001
+host: localhost:3001
 info:
   contact:
     email: admin@jogchat.com
@@ -415,32 +415,6 @@ paths:
             $ref: '#/definitions/model.ApplicantSignupResponseAPIError1'
             type: object
       summary: ApplicantCheckSignupEmail
-  /comment_on:
-    post:
-      consumes:
-      - application/json
-      description: CommentOn is an endpoint called when an applicant reply a comment
-        to a particular job position.
-      parameters:
-      - description: CommentOnRequest is a POST JSON type
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.CommentOnRequest'
-          type: object
-      responses:
-        "200":
-          description: Success on commenting
-          schema:
-            $ref: '#/definitions/model.CommentOnResponseSuccess'
-            type: object
-        "400":
-          description: invalid parent type
-          schema:
-            $ref: '#/definitions/model.CommentOnResponseAPIError0'
-            type: object
-      summary: CommentOn
   /get_all_companies:
     get:
       description: GetAllCompanies is an endpoint that returns companies list from
@@ -451,32 +425,6 @@ paths:
       description: GetAllSchools is an endpoint that returns schools list from schemaless
         database
       summary: Get All Schools
-  /post_position:
-    post:
-      consumes:
-      - application/json
-      description: PostPosition is an endpoint called when an referral create a job
-        position to refer with dedicated JSON.
-      parameters:
-      - description: PostPositionRequest is a POST JSON type
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.PostPositionRequest'
-          type: object
-      responses:
-        "200":
-          description: 'Success with position id: {"id":"1528edfd-2cbd-451f-9053-a89e2e806cbe"}'
-          schema:
-            $ref: '#/definitions/model.PostPositionResponseSuccess'
-            type: object
-        "400":
-          description: construct cell failure
-          schema:
-            $ref: '#/definitions/model.PostPositionResponseAPIError1'
-            type: object
-      summary: PostPosition
   /referrer_check_signup_email:
     post:
       consumes:
@@ -595,4 +543,61 @@ paths:
             $ref: '#/definitions/model.SigninResponseAPIError2'
             type: object
       summary: Signin
+  /v1/comment_on:
+    post:
+      consumes:
+      - application/json
+      description: CommentOn is an endpoint called when an applicant reply a comment
+        to a particular job position.
+      parameters:
+      - description: CommentOnRequest is a POST JSON type
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.CommentOnRequest'
+          type: object
+      responses:
+        "200":
+          description: Success on commenting
+          schema:
+            $ref: '#/definitions/model.CommentOnResponseSuccess'
+            type: object
+        "400":
+          description: invalid parent type
+          schema:
+            $ref: '#/definitions/model.CommentOnResponseAPIError0'
+            type: object
+      summary: CommentOn
+  /v1/post_position:
+    post:
+      consumes:
+      - application/json
+      description: PostPosition is an endpoint called when an referral create a job
+        position to refer with dedicated JSON.
+      parameters:
+      - description: PostPositionRequest is a POST JSON type
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.PostPositionRequest'
+          type: object
+      responses:
+        "200":
+          description: 'Success with position id: {"id":"1528edfd-2cbd-451f-9053-a89e2e806cbe"}'
+          schema:
+            $ref: '#/definitions/model.PostPositionResponseSuccess'
+            type: object
+        "400":
+          description: construct cell failure
+          schema:
+            $ref: '#/definitions/model.PostPositionResponseAPIError1'
+            type: object
+      summary: PostPosition
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
